added links between levels

--- a/templates/leveladd.html
+++ b/templates/leveladd.html
@@ -8,9 +8,13 @@
         <p>{{ message }}</p>
     </div>
 {% endif %}
-
 <form action="" method="post">
   <div class="form-group">
+    <select name="linkingto" id="linkingto">
+        {% for i in levelist %}    
+        <option value="{{i}}">{{i}}</option>
+        {% endfor %}
+      </select>
       <label for="inputname">{{levelname}} Name</label>
       <input name="name" class="form-control" for="inputname" placeholder="Hierarchy Name">
       <label for="inputmeterid">{{levelname}} Meter ID</label>
